--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</ul>
 	<h1>Mobile Details</h1>
 
-    
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
 	<script src="app.js"></script>
 </body>
