--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<ul>
 	</ul>
-	<h1>Mobile Details</h1>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 	<script src="app.js"></script>
 </body>
