--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<!Doctype html/>
-<html>
-<head>
-	<title>Mobile-Details</title>
-	<meta charset='utf-8' />
-	<link rel="stylesheet" href="main.css">
-</head>
-<body>
-	<ul>
-	</ul>
+<!Doctype html/> 
+ <html> 
 
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+ <head> 
+ 	<title>Mobile-Details</title> 
+ 	<meta charset='utf-8' /> 
+ 	<link rel="stylesheet" href="main.css"> 
 
-	<script src="app.js"></script>
-</body>
-</html>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script> 
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script> 
+  <script src="app.js"></script> 
+ </head> 
+
+ <body> 
+    <ul class="phones"> 
+    
+    </ul>
+
+ </body> 
+
+ </html> 
