search to find exact match

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
  </head> 
 
  <body> 
+
+ 	<form class="search">
+ 		<label class="form-label1" for="form-input1">Search:</label>
+	   	<input class="form-input" type="text" id="form-input1"></input>
+	   	<label class="form-label2" for="form-input1">Sort by:</label>
+	   	<select name="">
+	   		<option value="Newest">Newest</option>
+    		<option value="Alphabetical">Alphabetical</option>
+  		</select>
+ 	</form>
+
     <ul class="phones"> 
     
     </ul>
